# gitpulse

./: .gitignore  config.yaml  gitpulse.py  main.py  pyproject.toml  temp.py
