[project]
name = "gitpulse"
version = "0.1.0"
description = ""
authors = [
    {name = "Ronak Rathore"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "gitpython (>=3.1.50,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "certifi (>=2026.5.20,<2027.0.0)",
    "notify-py (>=0.3.43,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
